--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -13,4 +13,10 @@
             android:summary="@string/status_bar_native_battery_percentage_summary" />
 
     </PreferenceCategory>
+
+    <PreferenceScreen
+            android:fragment="com.android.settings.simpleaosp.StatusBarClockStyle"
+            android:key="clock_style_pref"
+            android:title="@string/status_bar_clock" />
+
 </PreferenceScreen>
