Settings: Allow disabling adjusting volume sounds [2/2]
* Option stored in Settings->Sounds & notification->Other settings.

Signed-off-by: BigBrother1984 <carlosavignano@aospa.co>
Change-Id: I9bb604179bece5298f1a94b6d2c1680a71e1c2a4

Conflicts:
	res/values/pa_strings.xml

--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -41,4 +41,7 @@
     <string name="battery_percent">Battery percent</string>
     <string name="battery_hidden">Battery hidden</string>
 
+    <!-- Title for the option enabling sound on volume slide adjust. [CHAR LIMIT=30] -->
+    <string name="volume_adjust_sound_title">Volume slider sound</string>
+
 </resources>
