Change Refrences to Disco

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -15,7 +15,7 @@
     </PreferenceCategory>
 
     <PreferenceScreen
-            android:fragment="com.android.settings.simpleaosp.StatusBarClockStyle"
+            android:fragment="com.android.settings.disco.StatusBarClockStyle"
             android:key="clock_style_pref"
             android:title="@string/status_bar_clock" />
 
