--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -91,16 +91,16 @@
 
 	<PreferenceScreen
 	        android:key="navigation_bar"
-	        android:fragment="com.android.settings.simpleaosp.NavigationBarSettings"
+	        android:fragment="com.android.settings.disco.NavigationBarSettings"
 	        android:title="@string/navigation_bar_title" />
 
 	<PreferenceScreen
 		android:key="status_bar"
-		android:fragment="com.android.settings.simpleaosp.StatusBarSettings"
+		android:fragment="com.android.settings.disco.StatusBarSettings"
 		android:title="@string/status_bar_title" />
 
 	<PreferenceScreen
 	        android:key="volume_rocker_settings"
-	        android:fragment="com.android.settings.simpleaosp.VolumeRocker"
+	        android:fragment="com.android.settings.disco.VolumeRocker"
 	        android:title="@string/volume_rocker_screen_title" />
 </PreferenceScreen>
