--- a/res/xml/disco_extras.xml
+++ b/res/xml/disco_extras.xml
@@ -26,14 +26,10 @@
         android:key="disco_navbar_category"
         android:title="@string/disco_preferencecategory_navbar" >
 
-    <ListPreference
-        android:key="navigation_bar_height"
-        android:dialogTitle="@string/disco_navbar_height"
-        android:title="@string/disco_navbar_height"
-        android:entries="@array/navigation_bar_height_entries"
-        android:entryValues="@array/navigation_bar_height_values"
-        android:defaultValue="48"
-        android:persistent="false" />
+	<PreferenceScreen
+	        android:key="navigation_bar"
+	        android:fragment="com.android.settings.disco.NavigationBarSettings"
+	        android:title="@string/disco_navbar_height" />
 
 </PreferenceCategory>
 
@@ -54,13 +50,10 @@
         android:key="disco_volumerocker_category"
         android:title="@string/disco_preferencecategory_volumerocker" >
 
-    <ListPreference
-        android:dialogTitle="@string/volume_key_cursor_control_title"
-        android:entries="@array/volume_key_cursor_control_entries"
-        android:entryValues="@array/volume_key_cursor_control_values"
-        android:key="volume_key_cursor_control"
-        android:persistent="false"
-        android:title="@string/volume_key_cursor_control_title" />
+	<PreferenceScreen
+	        android:key="volume_rocker_settings"
+	        android:fragment="com.android.settings.disco.VolumeRocker"
+	        android:title="@string/disco_prefscreen_volrocker_text" />
 
 </PreferenceCategory>
 
