--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -14,7 +14,7 @@
     <string name="keywords_disco">disco extras</string>
 
     <!-- DISCO Extras Menu  -->
-    <string name="header_category_disco">Project D.I.S.C.O. Extras</string>
+    <string name="header_category_disco">Customization</string>
     <string name="disco_tweaks">D.I.S.C.O. Tweaks</string>
     <string name="disco_preferencecategory_statusbar">Status Bar</string>
     <string name="disco_preferencecategory_recents">Recents Menu</string>
