--- a/res/xml/disco_extras.xml
+++ b/res/xml/disco_extras.xml
@@ -20,6 +20,12 @@
             android:title="@string/status_bar_native_battery_percentage_title"
             android:summary="@string/status_bar_native_battery_percentage_summary" />
 
+        <com.android.settings.disco.SystemSettingSwitchPreference
+            android:key="status_bar_show_weather"
+            android:title="@string/status_bar_show_weather_title"
+            android:summary="@string/status_bar_show_weather_summary"
+            android:defaultValue="true" />
+
 </PreferenceCategory>
 
 <PreferenceCategory
