--- a/res/xml/disco_extras.xml
+++ b/res/xml/disco_extras.xml
@@ -14,7 +14,7 @@
             android:key="clock_style_pref"
             android:title="@string/status_bar_clock" />
 
-        <CheckBoxPreference
+        <com.android.settings.disco.SystemSettingSwitchPreference
             android:defaultValue="false"
             android:key="status_bar_native_battery_percentage"
             android:title="@string/status_bar_native_battery_percentage_title"
