Settings: make unaccounted and over-counted battery usage configurable
Google disabled it for release builds here:

https://github.com/SlimRoms/packages_apps_Settings/commit/e6793771cedb47aed72f1c64f870b70357746938

well but it is enabled for whatever other type of builds beside the official release builds. That said it should
be a developer option so or so and not build type dependent.

Whatever added an option into developer settings to control it. Default value is false.

That said.....finally no complain about misc battery stat in battery settings xD

Change-Id: I7549b1c796d5d9413b4af5d80a31d6efeaf0352a

Conflicts:
	res/values/slim_strings.xml
	src/com/android/settings/DevelopmentSettings.java

--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -26,4 +26,8 @@
     <string name="status_bar_show_weather_summary">Show the weather in the status bar header...
 NOTE: Configure cLock widget and reboot first! You can remove cLock widget from your homescreen after configuring cLock widget and rebooting.</string>
 
+	    <!-- Unaccounted and overcounted battery stats -->
+    <string name="show_unac_and_overcounted_stats_title">Show unaccounted/overcounted stats</string>
+    <string name="show_unac_and_overcounted_stats_summary">Show in battery statistics unaccounted and over-counted usage.</string>
+
 </resources>
