--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -26,4 +26,7 @@
     <string name="status_bar_show_weather_summary">Show the weather in the status bar header...
 NOTE: Configure cLock widget and reboot first! You can remove cLock widget from your homescreen after configuring cLock widget and rebooting.</string>
 
+    <!-- BitSyko Layers  -->
+<string name="bitsyko_layers_str">Layers</string>
+
 </resources>
