--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -95,7 +95,18 @@
                     android:targetPackage="eu.chainfire.supersu"
                     android:targetClass="eu.chainfire.supersu.MainActivity" />
         </dashboard-tile>
-    
+
+        <!-- BitSyko Layers App -->
+          <dashboard-tile
+                android:id="@+id/bitsyko_layers"
+                android:icon="@drawable/ic_bitsyko_layers"
+		android:title="@string/bitsyko_layers_str">     
+		<intent
+                    android:action="android.intent.action.MAIN"
+                    android:targetPackage="org.bitsyko.overlaymanager"
+                    android:targetClass="org.bitsyko.overlaymanager.main" />
+        </dashboard-tile>
+
     </dashboard-category>
 
     <!-- DEVICE -->
