Settings: add Silent mode toggle (2/2)
Change-Id: Ide901e3e79f236b33669525021d53e8d9d46a1d2
Signed-off-by: Roman Birg <roman@cyngn.com>

Conflicts:
	res/values/cm_strings.xml
	res/xml/zen_mode_settings.xml

_

--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -31,5 +31,7 @@
 
     <!-- Misc -->
     <string name="display_rotation_title">Rotation</string>
+    <string name="none_is_silent_title">None is Silent mode</string>
+    <string name="none_is_silent_summary">Silent mode always sounds alarms</string>
 
 </resources>
