volume rocker: volume key cursor control- Credits @rascarlo

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -94,4 +94,8 @@
 	        android:fragment="com.android.settings.disco.NavigationBarSettings"
 	        android:title="@string/navigation_bar_title" />
 
+<PreferenceScreen
+	        android:key="volume_rocker_settings"
+	        android:fragment="com.android.settings.disco.VolumeRocker"
+	        android:title="@string/volume_rocker_screen_title" />
 </PreferenceScreen>
