It's ProjectDisco, not D.I.S.C.O. anymore. So change strings.

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -110,7 +110,7 @@
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
 
-        <!-- D.I.S.C.O. version -->
+        <!-- ProjectDisco version -->
         <Preference android:key="mod_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/mod_version"
