--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- D.I.S.C.O. version -->
-    <string name="mod_version">D.I.S.C.O. Version</string>
+    <!-- ProjectDisco version -->
+    <string name="mod_version">ProjectDisco Version</string>
     <string name="mod_version_default">Unknown</string>
 
     <!-- Show/Hide Search Bar -->
