--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -12,4 +12,24 @@
     <!-- Keywords -->
     <string name="keywords_recents_show_searchbar">recent recents disable search bar searchbar hide</string>
 
+    <!-- Notification drawer -->
+    <string name="notification_drawer_title">Notification drawer</string>
+    <string name="qs_category_title">Quick Settings</string>
+    <string name="qs_order_title">Select and order tiles</string>
+    <string name="add_qs">Add new tile</string>
+    <string name="cast_screen">Cast screen</string>
+    <string name="hotspot">Hotspot</string>
+    <string name="qs_action_delete">Delete</string>
+    <string name="qs_action_add">Add</string>
+    <string name="qs_action_no_more_tiles">No more tiles available</string>
+    <string name="qs_main_tiles_title">Enlarge first row</string>
+    <string name="qs_main_tiles_summary_on">Two main tiles on the first row</string>
+    <string name="qs_main_tiles_summary_off">Three tiles on each row</string>
+
+    <!-- Status bar -->
+    <string name="status_bar_title">Status bar</string>
+
+    <!-- Misc -->
+    <string name="display_rotation_title">Rotation</string>
+
 </resources>
