QS Editor: Tint images in XMLs
Because when we tint them using setColorFilter() in Java classes, we get NPEs. I don'
t know why.

--- a/res/layout/qs_item.xml
+++ b/res/layout/qs_item.xml
@@ -30,7 +30,8 @@
         <ImageView
             android:id="@android:id/icon"
             android:layout_width="24dp"
-            android:layout_height="24dp"/>
+            android:layout_height="24dp"
+            android:tint="#FF009587"/>
 
         <TextView
             android:id="@android:id/title"
