--- a/res/layout/add_qs_list_item.xml
+++ b/res/layout/add_qs_list_item.xml
@@ -27,7 +27,8 @@
         android:id="@android:id/icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="16dp"
+        android:tint="#FF009587"/>
 
     <TextView
         android:id="@android:id/text1"
