--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -76,20 +76,20 @@
             android:id="@+id/device_section"
             android:title="@string/header_category_device" >
 
+        <!-- ProjectDisco Tweaks -->
+        <dashboard-tile
+                android:id="@+id/projectdisco_tweaks_dashboard_tile"
+                android:title="@string/projectdisco_tweaks_string"
+                android:fragment="com.android.settings.disco.ProjectDiscoTweaks"
+		android:icon="@drawable/ic_projectdisco_tweaks"
+                />
+
         <!-- Home -->
         <dashboard-tile
                 android:id="@+id/home_settings"
                 android:title="@string/home_settings"
                 android:fragment="com.android.settings.HomeSettings"
                 android:icon="@drawable/ic_settings_home"
-                />
-
-        <!-- Notification drawer -->
-        <dashboard-tile
-                android:id="@+id/notification_drawer_settings"
-                android:title="@string/notification_drawer_title"
-                android:fragment="com.android.settings.cyanogenmod.NotificationDrawerSettings"
-                android:icon="@drawable/ic_settings_notification_drawer"
                 />
 
         <!-- Display -->
