try to implement battery style setting

--- a/res/values/disco_strings.xml
+++ b/res/values/disco_strings.xml
@@ -40,6 +40,7 @@
     <string name="battery_circle">Battery circle</string>
     <string name="battery_percent">Battery percent</string>
     <string name="battery_hidden">Battery hidden</string>
+    <string name="battery_icon_title_long">Battery status icon</string>
 
     <!-- Title for the option enabling sound on volume slide adjust. [CHAR LIMIT=30] -->
     <string name="volume_adjust_sound_title">Volume slider sound</string>
