--- a/res/xml/projectdisco_tweaks_sound.xml
+++ b/res/xml/projectdisco_tweaks_sound.xml
@@ -16,7 +16,7 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-	android:title="@string/sound_settings">
+	android:title="@string/pd_sound_settings">
 
     <!-- None to Silent mode -->
     <com.android.settings.disco.SystemSettingSwitchPreference
