--- a/res/xml/notification_drawer_settings.xml
+++ b/res/xml/notification_drawer_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2015 The CyanogenMod Project
+     Copyright (C) 2015 ProjectDisco
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -27,6 +28,11 @@
             android:title="@string/qs_main_tiles_title"
             android:summaryOn="@string/qs_main_tiles_summary_on"
             android:summaryOff="@string/qs_main_tiles_summary_off"
+            android:defaultValue="true" />
+
+        <com.android.settings.disco.SystemSettingSwitchPreference
+            android:key="show_adaptive_brightness_toggle"
+            android:title="@string/adaptive_brightness_toggle"
             android:defaultValue="true" />
 
 </PreferenceScreen>
