--- a/res/xml/projectdisco_tweaks.xml
+++ b/res/xml/projectdisco_tweaks.xml
@@ -24,6 +24,11 @@
 	android:title="@string/navigation_bar_title" />
 
      <PreferenceScreen
+	android:key="statusbar_settings"
+	android:fragment="com.android.settings.disco.StatusBarSettings"
+	android:title="@string/statusbar_settings_pd" />
+
+     <PreferenceScreen
 	android:key="recents_panel_settings"
 	android:fragment="com.android.settings.disco.RecentsPanelSettings"
 	android:title="@string/recents_panel_settings" />
